Fix scrollbar always appearing

--- a/src/components/app/css/app.css
+++ b/src/components/app/css/app.css
@@ -1,5 +1,5 @@
 .preset_container {
-  margin-top: 5%;
+  padding-top: 5%;
   margin-bottom: 1%;
 }
 
